# poormans_whatsapp

./: .cz.toml  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
mcpserver/: mcp_server.py
mcpserver/services/: db.py
mcpserver/tools/: _registry.py  users.py
migrations/: env.py
migrations/versions/: 0002_add_sender_type_to_messages.py  0003_fix_phone_constraint.py  4fa3cdf9e257_initial_schema.py
once/: agent_service.py  celery_app.py  constants.py  db_services.py  helper_functions.py  llm_services.py  logger.py  messages.py  once.py  otel_setup.py  redis_service.py  tasks.py  utils.py
once/db/: base.py  session.py
once/db/models/: __init__.py  conversation.py  media.py  message.py  user.py
seeds/: seed.py
