[project]
name = "poormans-whatsapp"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "cerebras-cloud-sdk>=1.67.0",
    "crewai>=1.6.1",
    "crewai-tools[mcp]>=1.6.1",
    "fastapi>=0.134.0",
    "fastmcp>=3.1.0",
    "groq>=1.0.0",
    "openai>=2.24.0",
    "openai-agents>=0.10.4",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "redis>=7.2.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "whatsapp-python>=4.3.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "black>=26.1.0",
    "isort>=8.0.0",
    "ruff>=0.15.4",
]